Behavioral like syntax is used.

--- a/TestReport/ExtentReports-Version3-Test-Automaton-Report.html
+++ b/TestReport/ExtentReports-Version3-Test-Automaton-Report.html
@@ -15,7 +15,7 @@
 
 		<link href='https://cdn.rawgit.com/anshooarora/extentreports-java/b4a58fcfd1e137bd9287244035a7c80d3d73b3af/dist/css/extent.css' type='text/css' rel='stylesheet' />
 	
-	<title>C:\Users\onurb\Google Drive\PROJECTS\MyOwnProjects\Selenium-Training\Selenium-Basics\Projects\PageGenerator\TestReport\ExtentReports-Version3-Test-Automaton-Report.html</title>
+	<title>/Users/onr/Google Drive/PROJECTS/MyOwnProjects/Selenium-Training/Selenium-Basics/Projects/PageGenerator/TestReport/ExtentReports-Version3-Test-Automaton-Report.html</title>
 
 	<style type='text/css'>
 	</style>
@@ -37,7 +37,7 @@
 		</ul>
 
 		<!-- report name -->
-		<span class='report-name'>C:\Users\onurb\Google Drive\PROJECTS\MyOwnProjects\Selenium-Training\Selenium-Basics\Projects\PageGenerator\TestReport\ExtentReports-Version3-Test-Automaton-Report.html</span>
+		<span class='report-name'>/Users/onr/Google Drive/PROJECTS/MyOwnProjects/Selenium-Training/Selenium-Basics/Projects/PageGenerator/TestReport/ExtentReports-Version3-Test-Automaton-Report.html</span>
 		
 		<!-- report headline -->
 		<span class='report-headline'></span>
@@ -46,7 +46,7 @@
 		<ul id='nav-mobile' class='right hide-on-med-and-down nav-right'>
 			<li>
                 <a href='#!'>
-                    <span class='label suite-start-time blue darken-3'>Jun 28, 2018 01:32:23 PM</span>
+                    <span class='label suite-start-time blue darken-3'>Oct 25, 2018 10:38:38 AM</span>
 				</a>
 			</li>
 			<li>
@@ -123,14 +123,14 @@
 				<li class='test displayed active  pass' status='pass' bdd='false' test-id='1'>
 					<div class='test-heading'>
 						<span class='test-name'>invalidLoginTest_EmptyUserEmptyPassword</span>
-						<span class='test-time'>Jun 28, 2018 01:32:36 PM</span>
+						<span class='test-time'>Oct 25, 2018 10:39:23 AM</span>
 						<span class='test-status right pass'>pass</span>
 					</div>
 					<div class='test-content hide'>
 <div class='test-time-info'>
-	<span class='label start-time'>Jun 28, 2018 01:32:36 PM</span>
-	<span class='label end-time'>Jun 28, 2018 01:32:36 PM</span>
-	<span class='label time-taken grey lighten-1 white-text'>0h 0m 0s+588ms</span>
+	<span class='label start-time'>Oct 25, 2018 10:39:23 AM</span>
+	<span class='label end-time'>Oct 25, 2018 10:39:23 AM</span>
+	<span class='label time-taken grey lighten-1 white-text'>0h 0m 0s+460ms</span>
 </div>
 	<div class='test-desc'>Invalid Login Scenario with empty username and password. </div>
 	<div class='test-steps'>
@@ -145,7 +145,7 @@
 			<tbody>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>1:32:36 PM</td>
+					<td class='timestamp'>10:39:23 AM</td>
 					<td class='step-details'>Test passed</td>
 				</tr>
 			</tbody>
@@ -158,14 +158,14 @@
 				<li class='test displayed active  pass' status='pass' bdd='false' test-id='2'>
 					<div class='test-heading'>
 						<span class='test-name'>invalidLoginTest_InvalidUserNameInvalidPassword</span>
-						<span class='test-time'>Jun 28, 2018 01:32:38 PM</span>
+						<span class='test-time'>Oct 25, 2018 10:39:23 AM</span>
 						<span class='test-status right pass'>pass</span>
 					</div>
 					<div class='test-content hide'>
 <div class='test-time-info'>
-	<span class='label start-time'>Jun 28, 2018 01:32:38 PM</span>
-	<span class='label end-time'>Jun 28, 2018 01:32:40 PM</span>
-	<span class='label time-taken grey lighten-1 white-text'>0h 0m 1s+557ms</span>
+	<span class='label start-time'>Oct 25, 2018 10:39:23 AM</span>
+	<span class='label end-time'>Oct 25, 2018 10:39:42 AM</span>
+	<span class='label time-taken grey lighten-1 white-text'>0h 0m 19s+314ms</span>
 </div>
 	<div class='test-desc'>Invalid Login Scenario with wrong username and password. </div>
 	<div class='test-steps'>
@@ -180,7 +180,7 @@
 			<tbody>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>1:32:40 PM</td>
+					<td class='timestamp'>10:39:42 AM</td>
 					<td class='step-details'>Test passed</td>
 				</tr>
 			</tbody>
@@ -270,19 +270,19 @@
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Start
-					<div class='panel-lead'>Jun 28, 2018 01:32:23 PM</div>
+					<div class='panel-lead'>Oct 25, 2018 10:38:38 AM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 			 		End
-			 		<div class='panel-lead'>Jun 28, 2018 01:32:41 PM</div>
+			 		<div class='panel-lead'>Oct 25, 2018 10:39:42 AM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Time Taken
-					<div class='panel-lead'>0h 0m 17s+922ms</div>
+					<div class='panel-lead'>0h 1m 3s+697ms</div>
 				</div>
 			</div>
 		</div>
